--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -127,7 +127,7 @@
         android:layout_height="65dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:inputType="text"
+        android:inputType="number"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
